--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate"
-    startCommand: "gunicorn inventory_management.wsgi:application --bind 0.0.0.0:$PORT"
+    startCommand: "gunicorn app.wsgi:application --bind 0.0.0.0:$PORT"
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.0
