--- a/render.yaml
+++ b/render.yaml
@@ -9,8 +9,8 @@ services:
     name: inventory-management-system
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate"
-    startCommand: "gunicorn app.wsgi:application --bind 0.0.0.0:$PORT"
+    buildCommand: "build.bat"
+    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.0
